# AVE-Core

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyre_configuration  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIVING_REFERENCE.md  MERGE_STRATEGY.md  Makefile  NOTICE  README.md  kb-burndown-actionable.md  kb-burndown-unified.md  kb-claims-boundaries-baseline-review.md  kb-claims-boundaries-convention.md  kb-claims-boundaries-final-review.md  kb-claims-boundaries-followups.md  pyproject.toml  pyrightconfig.json  setup.sh
.claude/: HARNESS_VALIDATION_QUEUE.md  HARNESS_VALIDATION_RESULTS_2026-05-08.md  settings.json
.cursor/: mcp.json
.github/: pull_request_template.md
.jupyter/: jupyter_lab_config.py
docs/: INSTALLATION.md  USAGE.md  amino_acid_spice_plan.md  boinc_deployment_guide.md  framing_and_presentation.md  glossary.md
future_work/: ATOMIC_IE_SOLVER_TRACKER.md  ATOM_MOTOR_TRANSLATION_MATRIX.md
mad-review/: kb-metadata-spine-spec.md
manuscript/: bibliography.bib  figures  predictions.yaml  vol_9_axiomatic_hardware_README.md
research/: 2026-05-17_C13b_bullet_cluster_prereg.md  2026-05-17_C14-DAMA_Q-factor_matched-LC-coupling_result.md  2026-05-17_C14-DAMA_Q-factor_prereg_and_derivation.md  2026-05-17_C14-DAMA_amplitude_prereg.md  2026-05-17_C14-DAMA_amplitude_result.md  2026-05-17_C14-DAMA_audit_walk-back.md  2026-05-17_DAMA-bulk-transfer-function-reframe.md  2026-05-17_HPGe-9.39kg-experimental-proposal.md  2026-05-17_KIMS-CsI-Tl-discovery-pass.md  2026-05-17_KIMS-MAJORANA-quantitative-bounds.md  ligo-ringdown-driver-design.md  (+20 more)
(+2340 files in other folders)
